fixed audio on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -121,6 +121,13 @@
   }
 }
 
+button,
+a,
+[role="button"],
+[tabindex] {
+  -webkit-tap-highlight-color: transparent;
+}
+
 html {
   background: var(--bg);
   color: var(--text);
